RESTASS-2 Add and configuration for testing and API tools
Included additional dependencies such as Allure JUnit REST Ass. Removed unused blank line in `DatabaseExampleTest`.